Cargando modulos de terceros.

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "browserify": "^13.1.0",
     "jspm": "^0.16.42",
+    "lodash": "^4.14.1",
     "webpack": "^1.13.1"
   }
 }
