--- a/package.json
+++ b/package.json
@@ -5,15 +5,20 @@
   "main": "index.js",
   "scripts": {
     "browserify": "browserify ./src/entry.js -o ./bundle.js",
-    "webpack": "webpack ./src/entry.js bundle.js"
+    "webpack": "webpack ./src/entry.js bundle.js",
+    "coffee": "coffee --output ./dist ./src/coffee-lib.coffee"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "babel-cli": "^6.11.4",
+    "babel-preset-es2015": "^6.9.0",
     "browserify": "^13.1.0",
+    "coffee-script": "^1.10.0",
     "jspm": "^0.16.42",
     "lodash": "^4.14.1",
+    "typescript": "^1.8.10",
     "webpack": "^1.13.1"
   }
 }
