Babel ES6 Tanspiler

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "browserify": "browserify ./src/entry.js -o ./bundle.js",
     "webpack": "webpack ./src/entry.js bundle.js",
     "coffee": "coffee --output ./dist ./src/coffee-lib.coffee",
-    "tsc": "tsc --outDir ./dist ./src/ts-lib.ts"
+    "tsc": "tsc --outDir ./dist ./src/ts-lib.ts",
+    "babel": "babel ./src/es6-lib.js -o ./dist/es6-lib.js"
   },
   "keywords": [],
   "author": "",
