--- a/package.json
+++ b/package.json
@@ -18,9 +18,18 @@
     "babel-preset-es2015": "^6.9.0",
     "browserify": "^13.1.0",
     "coffee-script": "^1.10.0",
-    "jspm": "^0.16.42",
     "lodash": "^4.14.1",
     "typescript": "^1.8.10",
     "webpack": "^1.13.1"
+  },
+  "jspm": {
+    "dependencies": {
+      "lodash": "npm:lodash@^4.14.1"
+    },
+    "devDependencies": {
+      "babel": "npm:babel-core@^5.8.24",
+      "babel-runtime": "npm:babel-runtime@^5.8.24",
+      "core-js": "npm:core-js@^1.1.4"
+    }
   }
 }
