--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "webpack": "webpack ./src/entry.js bundle.js",
     "coffee": "coffee --output ./dist ./src/coffee-lib.coffee",
     "tsc": "tsc --outDir ./dist ./src/ts-lib.ts",
-    "babel": "babel ./src/es6-lib.js -o ./dist/es6-lib.js"
+    "babel": "babel ./src/es6-lib.js -o ./dist/es6-lib.js",
+    "jshint": "jshint ./src/"
   },
   "keywords": [],
   "author": "",
@@ -18,6 +19,7 @@
     "babel-preset-es2015": "^6.9.0",
     "browserify": "^13.1.0",
     "coffee-script": "^1.10.0",
+    "jshint": "^2.9.2",
     "lodash": "^4.14.1",
     "typescript": "^1.8.10",
     "webpack": "^1.13.1"
